# sde-project

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  example.py  example2.py  pyproject.toml
kappa/: config.toml
kappa-cli/: config.toml
kappa-cli/kappa_cli/: __main__.py  config.py
kappa-data/: config.toml  pg-init.sql
kappa-data/kappa_data/: __init__.py  __main__.py  config.py  models.py  security.py
kappa-fn-code/: config.toml
kappa-fn-code/kappa_fn_code/: __init__.py  __main__.py  config.py
kappa-fn-logs/: config.toml
kappa-fn-logs/kappa_fn_logs/: __init__.py  __main__.py  config.py
kappa-logs/: config.toml
kappa-logs/kappa_logs/: __init__.py  __main__.py  config.py
kappa-runner/: config.toml
kappa-runner/kappa_runner/: __init__.py  __main__.py  config.py  runner.py
kappa/kappa/: __init__.py  __main__.py  config.py
libs/kappa-client/: .gitlab-ci.yml  .travis.yml  README.md  tox.ini
libs/kappa-client/.openapi-generator/: FILES
libs/kappa-client/docs/models/: Bill.md  CreateFunction.md  CreatedFunction.md  Function.md  GitHubResponse.md  HTTPValidationError.md  KappaLog.md  Log.md  LoggedInUser.md  LoginUser.md  Logs.md  Status.md  SuccessfulLogin.md  User.md  ValidationError.md
libs/kappa-client/kappa_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  schemas.py
libs/kappa-data-client/: .gitlab-ci.yml  .travis.yml  README.md  tox.ini
libs/kappa-data-client/.openapi-generator/: FILES
libs/kappa-data-client/docs/models/: Bill.md  (+9 more)
libs/kappa-data-client/kappa_data_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  schemas.py
libs/kappa-fn-code-client/: .gitlab-ci.yml  .travis.yml  README.md  tox.ini
libs/kappa-fn-code-client/.openapi-generator/: FILES
libs/kappa-fn-code-client/kappa_fn_code_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  schemas.py
libs/kappa-fn-logs-client/: .gitlab-ci.yml  .travis.yml  README.md  tox.ini
libs/kappa-fn-logs-client/.openapi-generator/: FILES
libs/kappa-fn-logs-client/kappa_fn_logs_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  schemas.py
libs/kappa-logs-client/: .gitlab-ci.yml  .travis.yml  README.md  tox.ini
libs/kappa-logs-client/.openapi-generator/: FILES
libs/kappa-logs-client/kappa_logs_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  schemas.py
libs/kappa-runner-client/: .gitlab-ci.yml  .travis.yml  README.md  tox.ini
libs/kappa-runner-client/.openapi-generator/: FILES
libs/kappa-runner-client/kappa_runner_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  schemas.py
report/: example-run.txt  report.tex
report/figures/: structure.tex
(+332 files in other folders)
