[tool.poetry]
name = "kappa"
version = "0.0.0"
description = "Run python functions, as a service."
authors = ["dpdani"]
readme = "README.md"
packages = [
    { include = "kappa/kappa" },
    { include = "kappa-data/kappa_data" },
    { include = "kappa-fn-code/kappa_fn_code" },
    { include = "kappa-fn-logs/kappa_fn_logs" },
    { include = "kappa-logs/kappa_logs" },
    { include = "kappa-runner/kappa_runner" },
]

[tool.poetry.dependencies]
python = "3.11"
requests = "2.28.1"
fastapi = "0.88.0"
sqlmodel = "0.0.8"
psycopg2-binary = "2.9.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pymongo = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
