[tool.poetry]
name = "kappa"
version = "0.0.0"
description = "Run python functions, as a service."
authors = ["dpdani"]
readme = "README.md"
packages = [
    { include = "kappa", from = "kappa/" },
    { include = "kappa_data", from = "kappa-data/" },
    { include = "kappa_fn_code", from = "kappa-fn-code/" },
    { include = "kappa_fn_logs", from = "kappa-fn-logs/" },
    { include = "kappa_logs", from = "kappa-logs/" },
    { include = "kappa_runner", from = "kappa-runner/" },
    { include = "kappa_client", from = "libs/kappa-client/" },
    { include = "kappa_data_client", from = "libs/kappa-data-client/" },
    { include = "kappa_fn_code_client", from = "libs/kappa-fn-code-client/" },
    { include = "kappa_fn_logs_client", from = "libs/kappa-fn-logs-client/" },
    { include = "kappa_logs_client", from = "libs/kappa-logs-client/" },
    { include = "kappa_runner_client", from = "libs/kappa-runner-client/" },
    { include = "kappa_cli", from = "kappa-cli/" },
]

[tool.poetry.scripts]
kappa = "kappa.__main__:cli"
kappa-data = "kappa_data.__main__:cli"
kappa-fn-code = "kappa_fn_code.__main__:cli"
kappa-fn-logs = "kappa_fn_logs.__main__:cli"
kappa-logs = "kappa_logs.__main__:cli"
kappa-runner = "kappa_runner.__main__:cli"
kappa-cli = "kappa_cli.__main__:cli"


[tool.poetry.dependencies]
python = "3.11"
requests = "2.28.1"
fastapi = "0.88.0"
sqlmodel = "0.0.8"
psycopg2-binary = "2.9.5"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
pymongo = "4.3.3"
typer = "0.7.0"
python-multipart = "0.0.5"
uvicorn = {extras = ["standard"], version = "0.20.0"}

# for autogenerated clients (see their requirements.txt)
frozendict = "2.3.4"
python-dateutil = "2.8.2"
halo = "^0.0.31"
rich = "^12.6.0"
tomlkit = "^0.11.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
